g code generator api
